5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1642_2729.log
== TEST (2019-04-17 19:17:02) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

if():
	mensagem = ("a+b")
else:
	mensagem = ("a-b")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:17:28) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

if():
	mensagem = ("a+b")
else:
	mensagem = ("a-b")

print(mensagem)
-- OUTPUT:
a-b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:18:03) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

if():
	mensagem = a+b
else:
	mensagem = a-b

print(mensagem)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:21:03) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

if(par or impar):
	mensagem = a+b
else:
	mensagem = a-b

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(par or impar):
NameError: name 'par' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:21:24) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

if():
	mensagem = a+b
else:
	mensagem = a-b

print(mensagem)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:22:56) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

if(a+b or a-b):
	mensagem = par
else:
	mensagem = impar

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = par
NameError: name 'par' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 23:53:55) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

formula = a%b
if(formula):
	mensagem = soma
else:
	mensagem = diferenca

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:35:06) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

produto = a*b
formula = produto%2

if(formula==0):
	mensagem = a+b
else:
	mensagem = b-a

print(mensagem)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 00:35:21) 
-- CODE:
a = int(input("digite numero 1: "))
b = int(input("digite numero 2: "))

produto = a*b
formula = produto%2

if(formula==0):
	mensagem = a+b
else:
	mensagem = b-a

print(mensagem)
-- EXECUTION TIME:
0.132503
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
